tests/ui/impl-unused-rps-in-assoc-type.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-rps-in-assoc-type.rs:11:6
   |
LL | impl<'a> Fun for Holder {
   |      ^^ unconstrained lifetime parameter
   |
help: Either remove the type parameter ''a' or make use of it, for example ` for S<'a>`.
   |
LL - impl<'a> Fun for Holder {
LL + impl<> Fun for Holder {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
